# YY_prep

./: .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: api.md  cli.md  conf.py  configuration.md  contributing.md  dicom2bids.md  fmriprep.md  heuristics.md  history.md  index.md  installation.md  quickstart.md  requirements.txt  troubleshooting.md  usage.md  workflows.md
docs/_static/: custom.css
examples/: fmriprep_usage.py  tzlil_preprocessing.ipynb
src/yyprep/: __init__.py  cli.py  utils.py
src/yyprep/dicom2bids/: convert.py  intended_for.py
src/yyprep/fmriprep/: __init__.py  interface.py
src/yyprep/static/: bids_filters.json  templates.py
src/yyprep/static/heuristics/: tzlil_heuristic.py
tests/: __init__.py  test_yyprep.py
