[project]
name = "yyprep"
version = "0.1.0"
description = "Preprocessing of MRI-derived data for Prof. Yaara Yeshurun's Lab"
readme = "README.md"
authors = [
  {name = "Gal Kepler", email = "galkepler@gmail.com"}
]
maintainers = [
  {name = "Gal Kepler", email = "galkepler@gmail.com"}
]
classifiers = [

]
license = {text = "MIT"}
dependencies = [
  "typer",
  "pandas",
  "nipype",
  "fmriprep-docker"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"    
]

[project.urls]
bugs = "https://github.com/GalKepler/yyprep/issues"
changelog = "https://github.com/GalKepler/yyprep/blob/master/changelog.md"
homepage = "https://github.com/GalKepler/yyprep"

[project.scripts]
yyprep = "yyprep.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
